# SimpleObjectData

./: CMakeLists.txt  CMakeUserPresets.json  QtdataFilter.cpp  QtdataFilter.h  QtdataFilter.ui  main.cpp  qt.cmake
include/: dataContanier.h  dataObject.h  secondaryFunc.h
src/: dataContenier.cpp  dataFilter.cpp  dataObject.cpp  secondaryFunc.cpp
